--- a/src/customModal/style.scss
+++ b/src/customModal/style.scss
@@ -2,12 +2,11 @@
 @import '../assets/styles/helpers/_utils.scss';
 @import '../assets/styles/helpers/_responsive.scss';
 
-.modal {
+.modalC {
   width: 100%;
   display: flex;
   justify-content: center;
   position: fixed;
-  z-index: 2;
   top: 0;
   left: 0;
   width: 100%;
@@ -17,22 +16,21 @@
     background: white;
     color: #fff;
     position:fixed;
-    top: 15%;
-    width: 95%;
+    top: 20%;
+    width: 320px;
     transition: all .5s;
     padding: 24px;
-    box-shadow: 0px 4px 15px rgba(31, 31, 31, 0.05);
+    box-shadow: 0px 4px 15px rgba(31, 31, 31, 0.3);
     border-radius: 12px;
     z-index: 2;
     @include desktop {
-      width: 320px;
-    }
-    @include tablet-large {
-      width: 320px;
-    }
-    @include tablet {
-      width: 320px;
-    }
+      top: 10%;
+      width: 550px;
+     }
+     @include tablet-large {
+      top: 10%;
+      width: 550px;
+     }
   }
   &__contImg {
     width: 100%;
@@ -67,11 +65,5 @@
     color: #919BA1;
     padding-top: 16px;
     cursor: pointer;
-  }
-}
-
-.global{
-  &__hidden {
-    display:none !important;
   }
 }
