--- a/src/SelectDropdown/styles.scss
+++ b/src/SelectDropdown/styles.scss
@@ -136,7 +136,7 @@
   }
   &__imgInput {
     position: absolute;
-    top: 11px;
+    top: 10px;
     left: 11px;
   }
   &__imgCont {
@@ -163,6 +163,9 @@
     overflow-y: scroll;
     max-height: 250px;
   }
+  &__opcionI {
+    justify-content: space-between !important;
+  }
   &__opcion {
     display: flex;
     flex-direction: row;
@@ -173,6 +176,13 @@
     width: 100%;
     height: 42px;
     background: #FFFFFF;
+    .checkElement {
+      width: 18px;
+      height: 18px;
+    }
+    .checkElement:checked {
+      background-color: #2FAD6F;
+    }
     &:hover {
       background: #ebfaf3;
     }
