--- a/src/customModal/style.scss
+++ b/src/customModal/style.scss
@@ -8,10 +8,11 @@
   justify-content: center;
   position: fixed;
   top: 0;
+  z-index: 2;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 0.4);
   &__panel {
     background: white;
     color: #fff;
